Closed Bug 131727 Opened 23 years ago Closed 22 years ago

compiler warnings in nsDiskCacheBlockFile

Categories

(Core :: Networking: Cache, defect)

x86
FreeBSD
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: timeless, Assigned: gordon)

References

()

Details

Attachments

(1 file)

/home/timeless/mozilla/netwerk/cache/src/nsDiskCacheBlockFile.cpp:48: warning: size in array new must have integral type /home/timeless/mozilla/netwerk/cache/src/nsDiskCacheBlockFile.cpp:38: warning: unused variable `enum PRStatus err' Is there a good reason not to use const short kBitMapBytes = 4096; //?
Attached patch proposed patchSplinter Review
Eliminating unused variable, and changing enum to const unsigned short to eliminate warnings.
Comment on attachment 102285 [details] [diff] [review] proposed patch sr=darin
Attachment #102285 - Flags: superreview+
Comment on attachment 102285 [details] [diff] [review] proposed patch r=sdagley
Attachment #102285 - Flags: review+
Fix checked in.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: