Fix bug 131727 "compiler warnings in nsDiskCacheBlockFile.cpp" r=sdagley, sr=darin.